A plentiful amount of fixes/slight changes
- React App title of webpage fixed and changed to EnTrack as requested
- Entrack title on home page changed to EnTrack as requested
- Fixed scroll bar not showing/allowing pages to be able to zoom in and out

--- a/SP23.P03.Web/ClientApp/src/pages/Login-Page/login-page.css
+++ b/SP23.P03.Web/ClientApp/src/pages/Login-Page/login-page.css
@@ -7,7 +7,8 @@
 }
 body{
   background: #1b1b1b;
-  overflow: hidden;
+  overflow-x: auto;
+  overflow-y: auto;
 }
 ::selection{
   background: rgba(26,188,156,0.3);
